# degenvsdegen

./: .env  .env.local  .gitignore  Anchor.toml  README.md  netlify.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
.next/: app-build-manifest.json  prerender-manifest.json  react-loadable-manifest.json  trace
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo  chrome-devtools-workspace-uuid
.next/server/: app-paths-manifest.json  middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @babel.js  @coral-xyz.js  @noble.js  @socket.io.js  @solana-mobile.js  @solana.js  @solflare-wallet.js  @swc.js  @toruslabs.js  @wallet-standard.js  abort-controller.js  base-x.js  base64url.js  bignumber.js.js  bn.js.js  borsh.js  bowser.js  brorand.js  bs58.js  buffer-layout.js  bufferutil.js  call-bind-apply-helpers.js  call-bind.js  call-bound.js  (+79 more)
.next/types/: routes.d.ts  validator.ts
app/: error.tsx  globals.css  layout.tsx  loading.tsx  mobile.css  not-found.tsx  page.tsx
app/about/: page.tsx
app/games/: page.tsx
app/token/: page.tsx
programs/degen-vs-degen/: Cargo.toml
programs/degen-vs-degen/src/: lib.rs
public/: test.html
scripts/: init-house-vault.js
src/components/: ClientWrapper.tsx  CoinflipGame.tsx  ErrorBoundary.tsx  Games.tsx  Header.tsx  WalletProvider.tsx
src/hooks/: useSolana.ts
tests/: degen-vs-degen.js
(+38 files in other folders)
